# regionlock

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix  result
.github/workflows/: ci.yml
docs/: SPEC.md  json-api.md
nix/: module.nix  package.nix
packaging/: org.pengeg.regionlock.policy  regionlock-refresh.service  regionlock-refresh.timer  regionlock.service
packaging/aur/: .SRCINFO  PKGBUILD
regionlock/: Cargo.toml
regionlock-apply/: Cargo.toml
regionlock-apply/src/: main.rs
regionlock-apply/tests/: applier_test.rs
regionlock-core/: Cargo.toml
regionlock-core/src/: backend.rs  config.rs  error.rs  escalate.rs  feed.rs  game.rs  lib.rs  ops.rs  payload.rs  ping.rs  plan.rs  regions.rs  state.rs
regionlock-core/tests/: codegen_test.rs  config_test.rs  feed_test.rs  ops_test.rs  ping_test.rs  plan_test.rs  regions_test.rs  state_test.rs
regionlock-core/tests/fixtures/: sdr-1422450.json  sdr-570.json  sdr-730.json
regionlock-core/tests/golden/: empty.nft  one-pop.nft  three-pops.nft
regionlock/src/: cli.rs  commands.rs  main.rs  output.rs
regionlock/tests/: cli_test.rs  generate_test.rs  ping_cli_test.rs
