[workspace]
resolver = "3"
members = ["regionlock-core", "regionlock", "regionlock-apply"]

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/gegnep/regionlock"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"
ureq = "3"
etcetera = "0.10"
libc = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap_mangen = "0.2"
regionlock-core = { path = "regionlock-core", default-features = false }
