[package]
name = "regionlock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Server picker for Steam Datagram Relay games (Deadlock, CS2, Dota 2)"

[dependencies]
regionlock-core = { workspace = true, features = ["fetch"] }
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
clap_mangen.workspace = true
serde_json.workspace = true
